Use double quotes in sty file

--- a/luagit.sty
+++ b/luagit.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{luagit}[2014/12/20 v0.1.0]
 
-\directlua{require('luagit')}
+\directlua{require("luagit")}
 
 \newcommand{\GitCurrentCommit}{\directlua{tex.sprint(CURRENT_HEAD)}}
 
